<package format="3">
  <name>tesseract_example</name>
  <version>0.0.0</version>
  <description>Example package for Tesseract with ROS2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_srdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
